fix overlapping panels

--- a/src/style/scss/_share.scss
+++ b/src/style/scss/_share.scss
@@ -2,7 +2,7 @@
     background-color: rgba(50, 50, 50, 0.8);
     filter: none;
     padding: 2em;
-    z-index: 10;
+    z-index: 18;
 }
 
 .iapp-share-close {
